# lab_6

./: CMakeLists.txt
include/: dungeon_editor.h
include/factory/: npc_factory.h
include/npc/: npc.h
include/visitor/: battle_visitor.h
src/: dungeon_editor.cpp  main.cpp
src/factory/: npc_factory.cpp
src/npc/: druid.cpp  npc.cpp  orc.cpp  squirrel.cpp
src/visitor/: battle_visitor.cpp
tests/: test_dungeon.cpp  test_npc.cpp
